test/data/semantic-errors/non-iterable-used-in-for-loop-expression.jen
x := 5

for i in x:
  print(x)
